@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Fix results_exist (Thanks Peter Rabbitson!) (closes #54)
 
 2.034000  2019-08-02 10:45:04-07:00 America/Los_Angeles
  - Added dt_SQL_subtract to ::DateMethods1
